# timegpt

./: main.py  pyproject.toml  utils.py
data/: MAC000108.csv  MAC000110.csv  MAC000117.csv  MAC000119.csv  MAC000121.csv
results/: MAC000108_timegpt_forecast_metrics.txt  MAC000110_timegpt_forecast_metrics.txt  MAC000117_timegpt_forecast_metrics.txt  MAC000119_timegpt_forecast_metrics.txt  MAC000121_timegpt_forecast_metrics.txt
